--- a/Домашка.md
+++ b/Домашка.md
@@ -2,6 +2,21 @@
 
 ## Введение текста.
 
+Чтобы выделить текст курсивом обрамите его звездоками (*) Например, *вот так*.
+
+Чтобы выделить текст полужирным, обрамите его двойными звездочками (**). Например, **вот так**.
+
+Чтобы выделить текст курсивом, необходимо обрамить его звездочкой (*) или знаком нижнего подчеркивания (_). Например *вот так* или _вот так_.
+Чтобы выделить текст курсивом обрамите его звездоками ( * ) Например, *вот так*.
+
+Чтобы выделить текст полужирным, обрамите его двойными звездочками (**). Например, **вот так**.
+
+Чтобы выделить текст курсивом, необходимо обрамить его звездочкой ( * ) или знаком нижнего подчеркивания ( _ ). Например *вот так* или _вот так_.
+
+Чтобы выделить текст полужирным, необходимо обрамить его двойными звездочками (**) или знаком двойного нижнего подчеркивания (__). Например **вот так** или __вот так__.
+
+Альтернативные методы выделения необходимы для совместного одномоментного использования. Например, _текст может быть написан курсивом и выделен **полужирным**_.
+
 ## Списки.
 
 ## Работа с изображением.
