Внесли информацию в абзац  списки

--- a/Домашка.md
+++ b/Домашка.md
@@ -19,6 +19,15 @@
 
 ## Списки.
 
+Чтобы добавить ненумерованные списки, необходимо пункты выделить звездочкой ( * ) или знаком ( + ). Например, вот так:
+* Элемент 1
+* Элемент 2
++ Элемент 3
+
+Чтобы добавить нумерованные списки, необходимо просто поставить номер. Например, вот так
+1. Элемент 1
+2. Элемент 2
+
 ## Работа с изображением.
 
 ## Ссылки.
