--- a/Домашка.md
+++ b/Домашка.md
@@ -30,6 +30,9 @@
 
 ## Работа с изображением.
 
+-Чтобы вставить изображение необходимо внести:
+- так ![любой текст](файл название с расширением): ![Hello!](%D0%BF%D0%B8%D0%BD%D0%B3%D0%B2%D0%B8%D0%BD.jpg)
+
 ## Ссылки.
 
 ## Работа с таблицами.
