--- a/Домашка.md
+++ b/Домашка.md
@@ -35,6 +35,23 @@
 
 ## Ссылки.
 
+Гиперссылка, с немедленным указанием адреса (внутритекстовая). Подразумевается, что помимо URL-адреса существует еще текст ссылки. Он заключается в квадратные скобки. Для создания внутритекстовой гиперссылки необходимо использовать круглые скобки сразу после закрывающей квадратной. Внутри них необходимо поместить URL-адрес. В них же возможно расположить название, заключенное в кавычки, которое будет отображаться при наведении, но этот пункт не является обязательным. Например,  [ слово например] (сама ссылка http://example.com/)  [пример](http://example.com/ "Необязательная подсказка").
+
+Для сносной гиперссылки вместо целевого адреса используется вторая пара квадратных скобок, внутри которых помещается метка, идентификатор ссылки (id). Например так: [пример] [id]: или так [пример][id]:
+
+Идентификатор ссылки, окружённый квадратными скобками (которым может предшествовать необязательный отступ от одного до трёх пробелов);
+Двоеточие;
+Один или несколько пробелов (или символов табуляции);
+URL гиперссылки;
+Необязательный заголовок (подсказка к изображению, которая всплывает при наведении на него) гиперссылки, заключённый либо в двойные или одиночные кавычки, либо в скобки.
+ Например, чтобы сделать слово «Example» гиперссылкой, ведущей на сайт http://example.com/ , достаточно написать:
+
+[Example][]
+и затем определить гиперссылку:
+
+[Example]: http://example.com/
+В результате на экран выводится следующее: Example
+
 ## Работа с таблицами.
 
 ## Цитаты.
