Внесли информацию по таблицам

--- a/Домашка.md
+++ b/Домашка.md
@@ -54,6 +54,22 @@ URL гиперссылки;
 
 ## Работа с таблицами.
 
+Вертикальные линии обозначают столбцы (|)
+Горизонтальные (---) строки
+Например, 
+First Header  | Second Header
+------------- | -------------
+Content Cell  | Content Cell
+Content Cell  | Content Cell
+
+Можно управлять выравниванием столбцов при помощи двоеточия (:).
+
+Сегодня | хорошая| погода|
+--------|--------|-------|
+
+|--Сегодня--|~~хорошая~~|*погода*|
+:-------|:-----:|------:|
+
 ## Цитаты.
 
 ## Основные комманды.
