Внесли информацию по цитатам

--- a/Домашка.md
+++ b/Домашка.md
@@ -72,4 +72,13 @@ Content Cell  | Content Cell
 
 ## Цитаты.
 
+Цитаты оформляются как в емейлах, с помощью символа ( > )
+Можно знак ( > ) ставить перед каждым элементом цитаты, будь то абзац, заголовок или пустая строка. Например,
+>(>) Великолепная погода и хорошее настроение.
+> > Вложенная цитата.
+>
+> Here's some example code:
+>
+>     return shell_exec("echo $input | $markdown_script");
+
 ## Основные комманды.
