Внесли информацию по основным коммандам

--- a/Домашка.md
+++ b/Домашка.md
@@ -82,3 +82,26 @@ Content Cell  | Content Cell
 >     return shell_exec("echo $input | $markdown_script");
 
 ## Основные комманды.
+
+1. __**git init**__ - инициализация репозитория
+
+2. __**git status**__ - проверяем статус, красный не запомнил\зеленый запомнил
+
+3. __**git add [название файла с расширением]**__ - проверяем видит ли нас и отслеживает
+
+4. __**git commit -m -[название с расширением]**__ - добавляем сообщение -коммит
+
+5.  __**git log**__ - проверяем список\журнал
+
+6.  __**git diff**__ - смотрим изменения ( красное - удалили, зеленое + добавили)
+
+7.  __**git checkout branch [название куда, например ветви]**__ - переход куда
+
+8.  __**git branch [название]**__- создание ветки, без название проверка где вы
+
+9.  __**git merge [название]**__- слияние веток, стоять на той, которая будет
+
+10. __**git branch -d [название]**__ - удаление ветки
+11. __**git graph**__ - увидеть дерево
+
+Всегда очередность add, commit, status, log.  Проверять сохраненные изменения и ветку.  Не забываем сохранять изменения CTRL+S 
