Внесли основные комманды

--- a/Домашка.md
+++ b/Домашка.md
@@ -1,4 +1,4 @@
-## Инструкция для работы с Markdown.
+# Инструкция для работы с Markdown.
 
 ## Введение текста.
 
@@ -104,4 +104,6 @@ Content Cell  | Content Cell
 10. __**git branch -d [название]**__ - удаление ветки
 11. __**git graph**__ - увидеть дерево
 
-Всегда очередность add, commit, status, log.  Проверять сохраненные изменения и ветку.  Не забываем сохранять изменения CTRL+S 
+Всегда очередность add, commit, status, log.  Проверять сохраненные изменения и ветку.  Не заSбываем сохранять изменения CTRL+S 
+
+# Заключение.
