Новые функции дописать

--- a/Домашка.md
+++ b/Домашка.md
@@ -107,3 +107,5 @@ Content Cell  | Content Cell
 Всегда очередность add, commit, status, log.  Проверять сохраненные изменения и ветку.  Не заSбываем сохранять изменения CTRL+S 
 
 # Заключение.
+
+Новые функции git remote 
