--- a/Домашка.md
+++ b/Домашка.md
@@ -31,7 +31,7 @@
 ## Работа с изображением.
 
 -Чтобы вставить изображение необходимо внести:
-- так ![любой текст](файл название с расширением): ![Hello!]()
+- так ![любой текст](файл название с расширением): ![Hello!](алло.jpg)
 
 ## Ссылки.
 
