--- a/Домашка.md
+++ b/Домашка.md
@@ -110,4 +110,6 @@ Content Cell  | Content Cell
 
 Новые функции git remote 
 
-Нужно дописать фкнции с ГитХабом
+Нужно дописать фкнции с ГитХабом.
+
+Обязательно дописать.
