--- a/Домашка.md
+++ b/Домашка.md
@@ -112,4 +112,4 @@ Content Cell  | Content Cell
 
 Нужно дописать фкнции с ГитХабом.
 
-Обязательно дописать.
+Обязательно дописать.Дописать, дописать, дописать. 
