Внесли изменения про GitHub

--- a/Домашка.md
+++ b/Домашка.md
@@ -108,8 +108,19 @@ Content Cell  | Content Cell
 
 # Заключение.
 
-Новые функции git remote 
+# Работа с удаленными репозиториями c GitHub.com
 
-Нужно дописать фкнции с ГитХабом.
+ 1. new repositor - создаем новый репозиторий в своем аккаунте в GitHub, он  Public  и его описание, желательно. Инициализацию пока оставляем.
+ 2. git remote add origion [ссылка с вашего репозиториума с GitHub] подключаем удаленный репозиторий
+ 3. git branch -M master - переименовываем ветку
+ 4. git push origion master - загружает в удаленный репозиторий изменения с компьютера
+ 5. git pull origion master - получает изменения с удаленного репозитория, сливая по умолчания ветки
+ 6. git clone [ссылка с GitHub.com] - клонируем переданный репозиторий с GitHub на наш локальный Virtual Stutio Code в компьютере
+ 7. cd [название файла] -  переходим в наш локальный файл, с которым мы познакомили наш VSC, на компютере
+ 8. Все изменения делать в новой ветке в VSC! 
+ 9. Репозиторий чужой берем через "fork", создаем вилку от оригинала и заводим на свой репозиторий в GitHub
 
-ВАЖНО. Обязательно дописать.Дописать, дописать, дописать. 
+
+Нужно дописать функции с ГитХабом.
+
+
