--- a/Домашка.md
+++ b/Домашка.md
@@ -118,5 +118,5 @@ Content Cell  | Content Cell
  8. Все изменения делать в новой ветке в VSC! 
  9. Репозиторий чужой берем через "fork", создаем вилку от оригинала и заводим на свой репозиторий в GitHub
 
-
+# Заключение.
 
